--- a/css/scss/_partials.scss
+++ b/css/scss/_partials.scss
@@ -467,7 +467,7 @@ li.right {
 }
 
 
-.order-calculator {
+#order-calculator {
   width: 329px;
   float: left;
   select {
@@ -528,23 +528,33 @@ li.right {
   }
 }
 
-  .summary-calculator {
+  #summary-calculator {
     input {
       float: left;
       padding: 10px;
       box-sizing: border-box;
+      font-family: 'ralewayregular', sans-serif;
+      border: none;
+      font-size: 16px;
+      color: $basic-gray2;
       &:nth-child(odd) {
         width: (($default-width/3)-110px);
         height: 40px;
       }
       &:nth-child(even) {
-        width: 110px;
+        width: 122px;
         height: 40px;
       }
-      &:first-child {
+      &:nth-child(-n+2) {
         color: $basic-green;
         font-size: 20px;
-
+      }
+      &:nth-child(n+9):nth-child(-n+10) {
+        font-size: 18px;
+        border-top: 1px solid $basic-gray2;
+      }
+      &:nth-child(-2n+8) {
+        border-left: 1px solid $basic-gray2;
       }
       &:last-child {
         float: right;
@@ -669,6 +679,7 @@ li.right {
       color: $basic-white;
       text-transform: uppercase;
       font-size: 26px;
+      font-family: 'ralewayregular', sans-serif;
     }
   }
 
